Firefox's Screenshot and eyedropper features ignore ClearType leves setting.
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox71 | --- | fixed |
People
(Reporter: misoni, Assigned: lsalzman, NeedInfo)
References
(Regressed 1 open bug)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:69.0) Gecko/20100101 Firefox/69.0
Steps to reproduce:
0.Enable WebRender.
1.Set ClearType level to Zero.
2.Access to https://aioilight.space/
3.Take a screenshot by Firefox's screenshot feature or Use Firefox's eyedropper.
Actual results:
At screenshot and eyedropper, They return wrong result which looks like ClearType level is -1 (auto).
Expected results:
They should return monochrome text when ClearType leve is zero.
Comment 1•6 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Updated•6 years ago
|
Updated•6 years ago
|
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
![]() |
||
Comment 4•6 years ago
|
||
bugherder |
![]() |
||
Updated•6 years ago
|
Comment 5•4 years ago
|
||
I was not able to reproduce this issue on Win10 using both 69.0a1 and 96.0a1 builds.
@ misonln41@protonmail.com can you please confirm issue is fixed on latest build?
Thank you.
Description
•