Bug 1572913 - check ClearType level in ScaledFontDWrite::GetDefaultAAMode. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D44912